--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "surana",
   "version": "1.0.0",
-  "description": "surana",
+  "description": "job",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Edwin",
+  "author": "Avudai",
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.3",
